feat: Implement complete Runes indexer with Bitcoin parser
Indexer Features:
- Stable memory storage for indexed Runes
- Efficient key encoding (block + tx_index)
- Pagination and search functionality
- Statistics tracking (total runes, last block)

Parser Implementation:
- Extract runestones from OP_RETURN scripts
- Validate OP_13 magic number
- Convert to IndexedRune with full metadata
- Calculate total supply (premine + mint terms)
- Batch parsing for multiple transactions

Bitcoin Client:
- Placeholder for block fetching (API pending)
- Mock transactions for testing
- Network conversion utilities
- HTTP outcall foundation for future

APIs Exposed:
- init_indexer(config)
- get_indexed_rune(id)
- list_indexed_runes(offset, limit)
- search_indexed_runes(query)
- get_indexer_stats()
- index_block_range(start, end)

Key differentiator: This allows QURI to show existing Runes
and validate our own etchings, essential for demo.

--- a/canisters/registry/Cargo.toml
+++ b/canisters/registry/Cargo.toml
@@ -19,6 +19,7 @@ ic-stable-structures.workspace = true
 # Internal
 quri-types = { path = "../../libs/quri-types" }
 quri-utils = { path = "../../libs/quri-utils" }
+runes-utils = { path = "../../libs/runes-utils" }
 
 # Serialization
 serde.workspace = true
