--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -14,3 +14,11 @@ NEXT_PUBLIC_INTERNET_IDENTITY_CANISTER_ID=rdmx6-jaaaa-aaaaa-aaadq-cai
 # For local: http://localhost:4943
 # For mainnet: https://ic0.app
 # For testnet: https://icp-api.io
+
+# IPFS Storage (Pinata)
+# Get your keys at: https://app.pinata.cloud/developers/api-keys
+NEXT_PUBLIC_PINATA_API_KEY=your-pinata-api-key
+NEXT_PUBLIC_PINATA_SECRET_KEY=your-pinata-secret-api-key
+
+# Optional: Alternative IPFS Gateway
+# NEXT_PUBLIC_IPFS_GATEWAY=https://gateway.pinata.cloud
