feat: Agregar configuración para deploy en ICP Playground y Vercel
Cambios principales:
- Agregado network 'playground' en dfx.json
- Creado script automatizado deploy-playground.sh que:
  * Compila y despliega canisters a ICP Playground
  * Genera frontend/.env.local automáticamente
  * Muestra Canister IDs y URLs
  * Provee instrucciones para Vercel

- Actualizado frontend/.env.example con:
  * Todos los Canister IDs necesarios
  * Instrucciones detalladas de configuración
  * Guías para obtener IDs (script, manual, local)
  * Documentación completa de Vercel deployment

- Actualizado DEPLOYMENT.md con:
  * Sección de Playground deployment (recomendado para testing)
  * Pasos para configurar Vercel
  * Instrucciones paso a paso

Esto permite hacer pruebas rápidas desde Vercel conectando a
canisters desplegados en ICP Playground (gratis, 20 min expiry).

Para usar:
1. ./scripts/deploy-playground.sh
2. Configurar variables en Vercel dashboard
3. Redeploy frontend en Vercel

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,19 +1,32 @@
+# ========================================
+# QURI Protocol - Environment Variables
+# ========================================
+
 # Internet Computer Configuration
-NEXT_PUBLIC_IC_HOST=http://localhost:4943
+# For playground/production: https://ic0.app
+# For local development: http://localhost:4943
+NEXT_PUBLIC_IC_HOST=https://ic0.app
+NEXT_PUBLIC_DFX_NETWORK=ic
 
-# Canister IDs (Update these after deploying canisters)
-NEXT_PUBLIC_RUNE_ENGINE_CANISTER_ID=your-rune-engine-canister-id
-NEXT_PUBLIC_BITCOIN_INTEGRATION_CANISTER_ID=your-bitcoin-integration-canister-id
-NEXT_PUBLIC_REGISTRY_CANISTER_ID=your-registry-canister-id
-NEXT_PUBLIC_IDENTITY_MANAGER_CANISTER_ID=your-identity-manager-canister-id
+# ========================================
+# ICP Canister IDs
+# ========================================
+# Get these IDs after deploying canisters
+# Quick start: Run ./scripts/deploy-playground.sh
 
-# Internet Identity (for local development)
+# Core Canisters (required)
+NEXT_PUBLIC_RUNE_ENGINE_CANISTER_ID=
+NEXT_PUBLIC_BITCOIN_INTEGRATION_CANISTER_ID=
+NEXT_PUBLIC_REGISTRY_CANISTER_ID=
+NEXT_PUBLIC_IDENTITY_MANAGER_CANISTER_ID=
+
+# Backend Canisters (optional - when implemented)
+NEXT_PUBLIC_DEX_CANISTER_ID=
+NEXT_PUBLIC_BRIDGE_CANISTER_ID=
+NEXT_PUBLIC_WRUNES_LEDGER_CANISTER_ID=
+
+# Internet Identity (mainnet)
 NEXT_PUBLIC_INTERNET_IDENTITY_CANISTER_ID=rdmx6-jaaaa-aaaaa-aaadq-cai
-
-# Development vs Production
-# For local: http://localhost:4943
-# For mainnet: https://ic0.app
-# For testnet: https://icp-api.io
 
 # IPFS Storage (Pinata)
 # Get your keys at: https://app.pinata.cloud/developers/api-keys
@@ -22,3 +35,89 @@ NEXT_PUBLIC_PINATA_SECRET_KEY=your-pinata-secret-api-key
 
 # Optional: Alternative IPFS Gateway
 # NEXT_PUBLIC_IPFS_GATEWAY=https://gateway.pinata.cloud
+
+# ========================================
+# How to Get Canister IDs
+# ========================================
+#
+# OPTION 1: Automated Script (Recommended) ⚡
+# ------------------------------------------
+# Run: ./scripts/deploy-playground.sh
+# This will:
+# - Deploy all canisters to ICP Playground
+# - Automatically create frontend/.env.local with IDs
+# - Show you the URLs to access canisters
+#
+# OPTION 2: Manual Deployment
+# ----------------------------
+# 1. Deploy to playground (free, 20 min expiry):
+#    dfx deploy --playground
+#
+# 2. Get canister IDs:
+#    dfx canister id rune-engine --playground
+#    dfx canister id registry --playground
+#    (repeat for each canister)
+#
+# 3. Copy this file to .env.local and add the IDs
+#
+# OPTION 3: Local Development
+# ----------------------------
+# 1. Start local replica:
+#    dfx start --background --clean
+#
+# 2. Deploy locally:
+#    dfx deploy
+#
+# 3. Get canister IDs:
+#    dfx canister id rune-engine
+#
+# 4. Set NEXT_PUBLIC_IC_HOST=http://localhost:4943
+#
+# ========================================
+# Vercel Deployment
+# ========================================
+#
+# To deploy to Vercel with canister integration:
+#
+# 1. Deploy canisters first (use script or manual method above)
+#
+# 2. Add environment variables in Vercel:
+#    a. Go to: https://vercel.com/dashboard
+#    b. Select your QURI-PROTOCOL project
+#    c. Go to: Settings → Environment Variables
+#    d. Add each NEXT_PUBLIC_* variable
+#    e. Choose environments: Production, Preview, Development
+#
+# 3. Redeploy:
+#    - Push to GitHub (auto-deploy if enabled)
+#    - Or run: vercel --prod
+#
+# 4. Test:
+#    - Visit your Vercel URL
+#    - Check browser console for canister connections
+#
+# ========================================
+# Important Notes
+# ========================================
+#
+# ⚠️  Playground Limitations:
+# - Canisters expire after 20 minutes
+# - Free but temporary
+# - Perfect for demos and testing
+#
+# 💰 Production Deployment:
+# - Use: dfx deploy --network ic
+# - Requires cycles (buy ICP and convert)
+# - Canisters are permanent
+# - See: https://internetcomputer.org/docs/current/developer-docs/getting-started/cycles/cycles-faucet
+#
+# 🔐 Security:
+# - Never commit .env.local to git
+# - All NEXT_PUBLIC_* vars are exposed in browser
+# - Keep API keys (Pinata) secure
+#
+# 📚 Documentation:
+# - ICP Docs: https://internetcomputer.org/docs
+# - Vercel Env Vars: https://vercel.com/docs/projects/environment-variables
+# - QURI Docs: See README.md
+#
