--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,36 +15,37 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@dfinity/agent": "^2.1.0",
+    "@dfinity/auth-client": "^2.1.0",
+    "@dfinity/candid": "^2.1.0",
+    "@dfinity/identity": "^2.1.0",
+    "@dfinity/principal": "^2.1.0",
+    "@hookform/resolvers": "^3.9.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.460.0",
     "next": "^14.2.0",
+    "nft.storage": "^7.2.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "@dfinity/agent": "^2.1.0",
-    "@dfinity/candid": "^2.1.0",
-    "@dfinity/principal": "^2.1.0",
-    "@dfinity/identity": "^2.1.0",
-    "@dfinity/auth-client": "^2.1.0",
-    "clsx": "^2.1.1",
-    "tailwind-merge": "^2.5.0",
-    "lucide-react": "^0.460.0",
-    "zod": "^3.23.0",
     "react-hook-form": "^7.53.0",
-    "@hookform/resolvers": "^3.9.0"
+    "tailwind-merge": "^2.5.0",
+    "zod": "^3.23.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.9",
+    "@testing-library/jest-dom": "^6.1.0",
+    "@testing-library/react": "^14.0.0",
     "@types/node": "^20.0.0",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
-    "typescript": "^5.0.0",
+    "autoprefixer": "^10.4.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.0",
-    "tailwindcss": "^3.4.0",
-    "postcss": "^8.4.0",
-    "autoprefixer": "^10.4.0",
-    "prettier": "^3.3.0",
-    "@tailwindcss/forms": "^0.5.9",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/jest-dom": "^6.1.0",
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0"
+    "jest-environment-jsdom": "^29.7.0",
+    "postcss": "^8.4.0",
+    "prettier": "^3.3.0",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.0.0"
   }
 }
