fix: Add NFT.Storage integration with proper Bearer token authentication
- Create nft-storage.ts with correct Authorization header format
- Use Bearer token as per NFT.Storage API documentation
- Add NEXT_PUBLIC_NFT_STORAGE_API_KEY to .env.example
- Implement uploadToIPFS and uploadMetadataToIPFS functions
- Add proper error handling and logging
- Support mock uploads for development without API key

Fixes the authentication issue where API key was not being sent
correctly in the Authorization header.

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -33,6 +33,11 @@ NEXT_PUBLIC_INTERNET_IDENTITY_CANISTER_ID=rdmx6-jaaaa-aaaaa-aaadq-cai
 NEXT_PUBLIC_PINATA_API_KEY=your-pinata-api-key
 NEXT_PUBLIC_PINATA_SECRET_KEY=your-pinata-secret-api-key
 
+# NFT.Storage (Alternative/Primary IPFS Storage)
+# Get your API key at: https://nft.storage/manage/
+# IMPORTANT: Use the FULL API key (starts with eyJ...)
+NEXT_PUBLIC_NFT_STORAGE_API_KEY=your-nft-storage-api-key
+
 # Optional: Alternative IPFS Gateway
 # NEXT_PUBLIC_IPFS_GATEWAY=https://gateway.pinata.cloud
 
