feat: Add production-ready Bitcoin confirmation tracking, idempotency system, and stable memory configs
- Implement real Bitcoin confirmation tracking via HTTPS Outcalls to Blockstream API
- Add idempotency module to prevent duplicate rune creations (SHA256-based request IDs)
- Move EtchingConfig and CanisterConfig to stable memory (survive upgrades)
- Add transform function for HTTPS outcalls optimization
- Implement TTL-based cleanup for idempotency records (7 days)
- Update .gitignore to protect sensitive files

New modules:
- confirmation_tracker.rs: Real Bitcoin confirmation verification
- idempotency.rs: Request deduplication with persistent storage
- config.rs: Stable memory configuration management
- fee_manager.rs: Dynamic fee estimation
- rbac.rs: Role-based access control

Memory layout:
- MemoryId 0: Runes storage
- MemoryId 1: State storage (etching processes)
- MemoryId 2: RBAC storage
- MemoryId 3: Idempotency storage
- MemoryId 4: EtchingConfig storage
- MemoryId 5: CanisterConfig storage

All changes compile successfully with zero errors.

--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,15 @@ canisters/**/*.wasm.gz
 
 # Environment
 .env
+.env.*
 .env.local
 .env.*.local
+*.env
+
+# Sensitive files
+nftstorageapi.txt
+vercel-env*.txt
+*api-key*.txt
 
 # IDE
 .vscode/
@@ -42,3 +49,13 @@ out/
 tmp/
 temp/
 *.tmp
+
+# Cargo build artifacts
+.cargo/
+deps/
+
+# Deployment scripts (may contain sensitive info)
+deploy-fix.sh
+deploy-mainnet.sh
+quick-playground-deploy.sh
+validate-nft-storage-key.sh
