--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -22,9 +22,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Local env files
+# Local env files (KEEP .env.development and .env.production in git)
 .env*.local
-.env
+.env.local
 
 # Vercel
 .vercel
