fix: Resolve WASM build issues and optimize dependencies
This commit fixes critical WASM compilation errors and optimizes the project's dependency structure following DFINITY best practices.

- Remove invalid `no-std` feature from bitcoin crate (doesn't exist in v0.32)
- Remove explicit secp256k1 dependency (now transitive via bitcoin)
- Use bitcoin::secp256k1::* imports instead of direct secp256k1 imports
- Follow DFINITY's basic_bitcoin example configuration

- Update imports in libs/schnorr-signatures/src/lib.rs
- Update imports in libs/bitcoin-utils/src/address.rs
- Clean unused imports in confirmation_tracker.rs, etching_flow.rs
- Remove deprecated RuneId usage in favor of RuneKey

- Add scripts/build-wasm.sh with LLVM toolchain configuration for macOS
- Add WASM_BUILD_FIX.md documentation

- FIX #1: Replace RuneId with RuneKey (bounded, stable)
- FIX #2: Clean unused imports
- FIX #3: Add mainnet/testnet features to bitcoin-integration
- FIX #4: Remove unused BondingCurve import in registry
- FIX #5: Remove unused query import in bitcoin-integration

✅ All canisters compile successfully to WASM
- rune_engine.wasm: 1.0 MB
- registry.wasm: 710 KB
- bitcoin_integration.wasm: 702 KB
- identity_manager.wasm: 496 KB

- cargo check: PASSED
- WASM builds: PASSED (with LLVM toolchain)
- Only warnings: unused code (expected in development)

--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -31,11 +31,11 @@ ic-cdk-timers = "0.7"
 ic-stable-structures = "0.6"
 ic-ledger-types = "0.11"
 
-# Bitcoin & Crypto (matching DFINITY examples)
+# Bitcoin & Crypto (Following DFINITY's basic_bitcoin example)
+# Use bitcoin crate without custom features - works OOTB with WASM
 bitcoin = "0.32.7"
-secp256k1 = "0.29"
-sha2 = "0.10"
-ripemd = "0.1"
+sha2 = { version = "0.10", default-features = false }
+ripemd = { version = "0.1", default-features = false }
 
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
