chore: Reorganize docs, clean history, apply audit fixes - Move all documentation to /docs/ (excluded from git) - Clean professional README.md for GitHub - Remove duplicate deployment scripts - Add master deploy.sh script - Add etching_flow tests (53 tests) - Add settlement tests (35 tests) - Remove dead code and obsolete files

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,6 @@ deploy-fix.sh
 deploy-mainnet.sh
 quick-playground-deploy.sh
 validate-nft-storage-key.sh
+
+# Documentation (local only, not for GitHub)
+/docs/
