feat: Add Virtual Rune Trading with bonding curve AMM - Add trading module with bonding curve price discovery - Add ICP balance management (deposit/withdraw) - Add trading pool creation and management - Add buy/sell quotes with slippage protection - Add trade history tracking - Update frontend IDL with trading types and functions - Add Trade page to dashboard sidebar - Update environment config to use mainnet consistently - Update READMEs with new canister IDs and trading docs Canister IDs (Mainnet): - rune-engine: pkrpq-5qaaa-aaaah-aroda-cai - registry: pnqje-qiaaa-aaaah-arodq-cai - identity-manager: y67br-5iaaa-aaaah-arn5q-cai

--- a/backend/canisters/rune-engine/Cargo.toml
+++ b/backend/canisters/rune-engine/Cargo.toml
@@ -16,6 +16,7 @@ ic-cdk.workspace = true
 ic-cdk-macros.workspace = true
 ic-cdk-timers.workspace = true
 ic-stable-structures.workspace = true
+ic-ledger-types.workspace = true
 
 # Internal
 quri-types = { path = "../../libs/quri-types" }
